--- a/notebooks/basic_python.ipynb
+++ b/notebooks/basic_python.ipynb
@@ -1544,9 +1544,146 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting spider\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n",
+      "[1/2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def spider(max_pages):\n",
+    "    print (\"Starting spider\")\n",
+    "    page = 1\n",
+    "    while page < max_pages:\n",
+    "        print (\"[%d/%d]\" % (page, max_pages))\n",
+    "        url = 'http://creativeworks.tistory.com/' + str(page)\n",
+    "        source_code = requests.get(url)\n",
+    "        plain_text = source_code.text\n",
+    "        soup = BeautifulSoup(plain_text, 'lxml')\n",
+    "        for link in soup.select('h2 > a'):\n",
+    "            href = \"http://creativeworks.tistory.com\" + link.get('href')\n",
+    "            title = link.string\n",
+    "            print(href)\n",
+    "            print(title)\n",
+    "            get_single_article(href)\n",
+    "    page += 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_single_article(item_url):\n",
+    "    source_code = requests.get(item_url)\n",
+    "    plain_text = source_code.text\n",
+    "    soup = BeautifulSoup(plain_text, 'lxml')\n",
+    "    for contents in soup.select('p > span'):\n",
+    "        print(contents.text)\n",
+    "\n",
+    "spider(2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": []
