--- a/notebooks/char_rnn_train_hangul.ipynb
+++ b/notebooks/char_rnn_train_hangul.ipynb
@@ -79,6 +79,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# See how batch looks like"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of 'x' is <type 'numpy.ndarray'>. Shape is (50, 50)\n",
+      "x looks like \n",
+      "[[14  3  4 ..., 17 16  0]\n",
+      " [ 0  2 11 ...,  0 14  6]\n",
+      " [ 5  8 12 ...,  2 16  4]\n",
+      " ..., \n",
+      " [ 5  9  0 ...,  3  0 13]\n",
+      " [18  7  0 ..., 14  3  4]\n",
+      " [13  8  5 ..., 13  3  0]]\n",
+      "\n",
+      "Type of 'y' is <type 'numpy.ndarray'>. Shape is (50, 50)\n",
+      "y looks like \n",
+      "[[ 3  4  0 ..., 16  0 23]\n",
+      " [ 2 11  0 ..., 14  6  0]\n",
+      " [ 8 12  0 ..., 16  4  0]\n",
+      " ..., \n",
+      " [ 9  0  1 ...,  0 13  8]\n",
+      " [ 7  0  2 ...,  3  4  0]\n",
+      " [ 8  5  0 ...,  3  0  7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y = data_loader.next_batch()\n",
+    "print (\"Type of 'x' is %s. Shape is %s\" % (type(x), x.shape,))\n",
+    "print (\"x looks like \\n%s\" % (x))\n",
+    "print\n",
+    "print (\"Type of 'y' is %s. Shape is %s\" % (type(y), y.shape,))\n",
+    "print (\"y looks like \\n%s\" % (y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# data_loader.vocab"
    ]
   },
