--- a/notebooks/cnn_customdata_basic.ipynb
+++ b/notebooks/cnn_customdata_basic.ipynb
@@ -113,7 +113,7 @@
     "    'wc1': tf.Variable(tf.random_normal([7, 7, 1, 128], stddev=0.1)),\n",
     "    'wc2': tf.Variable(tf.random_normal([3, 3, 128, 128], stddev=0.1)),\n",
     "    'wd1': tf.Variable(tf.random_normal(\n",
-    "            [imgsize[0]/4*imgsize[1]/4*128, 128], stddev=0.1)),\n",
+    "            [(int)(imgsize[0]/4*imgsize[1]/4)*128, 128], stddev=0.1)),\n",
     "    'wd2': tf.Variable(tf.random_normal([128, n_output], stddev=0.1))\n",
     "}\n",
     "biases   = {\n",
