--- a/notebooks/demo_Hangul.ipynb
+++ b/notebooks/demo_Hangul.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
     "import sys\n",
     "import os\n",
     "from TextLoader import *\n",
-    "from Hangulpy import *\n",
+    "from Hangulpy3 import *\n",
     "print (\"Load packs\")"
    ]
   },
@@ -43,28 +43,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def conv_file(fromfile, tofile):\n",
-    "    with open(fromfile, \"r\") as f:\n",
+    "    with open(fromfile, \"rb\") as f:\n",
     "        sample_text=f.read(10240)\n",
     "    pred = chardet.detect(sample_text)\n",
     "    if not pred['encoding'] in ('EUC-KR', 'UTF-8', 'CP949', 'UTF-16LE'):\n",
-    "        print \"WARNING! Unknown encoding! : %s = %s\" % (fromfile, pred['encoding'])\n",
+    "        print (\"WARNING! Unknown encoding! : %s = %s\") % (fromfile, pred['encoding'])\n",
     "        pred['encoding'] = \"CP949\" # 못찾으면 기본이 CP949\n",
     "        formfile = fromfile + \".unknown\"\n",
     "    elif pred['confidence'] < 0.9:\n",
-    "        print \"WARNING! Unsured encofing! : %s = %s / %s\" \n",
+    "        print (\"WARNING! Unsured encofing! : %s = %s / %s\")\n",
     "        % (fromfile, pred['confidence'], pred['encoding'])\n",
     "        formfile = fromfile + \".notsure\"\n",
     "    with codecs.open(fromfile, \"r\", encoding=pred['encoding'], errors=\"ignore\") as f:\n",
     "        with codecs.open(tofile, \"w+\", encoding=\"utf8\") as t:\n",
     "            all_text = f.read()\n",
-    "            t.write(all_text)"
+    "            t.write(all_text)\n"
    ]
   },
   {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,8 @@
     }
    ],
    "source": [
-    "parsed_txt = dump_file(tofile).encode(\"utf8\")\n",
+    "parsed_txt = dump_file(tofile).encode(\"utf8\") # For python2\n",
+    "# parsed_txt = dump_file(tofile) # For python2\n",
     "print (\"Parsing %s done\" % (tofile))\n",
     "print (parsed_txt[:100])"
    ]
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": true
