--- a/notebooks/rnn_mnist_simple.ipynb
+++ b/notebooks/rnn_mnist_simple.ipynb
@@ -33,7 +33,6 @@
     "# Import packages\n",
     "import tensorflow as tf\n",
     "import tensorflow.examples.tutorials.mnist.input_data as input_data\n",
-    "from tensorflow.models.rnn import rnn, rnn_cell # <== Newly added\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline \n",
@@ -63,8 +62,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/etc/rnn_input1.png\" width=\"500\" height=\"200\" >\n",
-    "<img src=\"images/etc/rnn_input2.png\" width=\"500\" height=\"200\" >\n",
     "<img src=\"images/etc/rnn_input3.jpg\" width=\"700\" height=\"400\" >"
    ]
   },
@@ -116,8 +113,8 @@
     "    # 5. Get LSTM's final output (_O) and state (_S)\n",
     "    #    Both _O and _S consist of 'batchsize' elements\n",
     "    with tf.variable_scope(_name):\n",
-    "        lstm_cell = rnn_cell.BasicLSTMCell(dimhidden, forget_bias=1.0)\n",
-    "        _LSTM_O, _LSTM_S = rnn.rnn(lstm_cell, _Hsplit, initial_state=_istate)\n",
+    "        lstm_cell = tf.nn.rnn_cell.BasicLSTMCell(dimhidden, forget_bias=1.0)\n",
+    "        _LSTM_O, _LSTM_S = tf.nn.rnn(lstm_cell, _Hsplit, initial_state=_istate)\n",
     "    # 6. Output\n",
     "    _O = tf.matmul(_LSTM_O[-1], _W['out']) + _b['out']    \n",
     "    # Return! \n",
@@ -198,21 +195,21 @@
      "output_type": "stream",
      "text": [
       "Start optimization\n",
-      "Epoch: 000/005 cost: 0.578044054\n",
-      " Training accuracy: 0.961\n",
-      " Test accuracy: 0.891\n",
-      "Epoch: 001/005 cost: 0.158857340\n",
-      " Training accuracy: 0.961\n",
-      " Test accuracy: 0.959\n",
-      "Epoch: 002/005 cost: 0.093290744\n",
-      " Training accuracy: 0.992\n",
+      "Epoch: 000/005 cost: 0.565064912\n",
+      " Training accuracy: 0.977\n",
+      " Test accuracy: 0.876\n",
+      "Epoch: 001/005 cost: 0.154534578\n",
+      " Training accuracy: 0.969\n",
+      " Test accuracy: 0.953\n",
+      "Epoch: 002/005 cost: 0.097276793\n",
+      " Training accuracy: 0.969\n",
+      " Test accuracy: 0.963\n",
+      "Epoch: 003/005 cost: 0.076267744\n",
+      " Training accuracy: 0.977\n",
       " Test accuracy: 0.969\n",
-      "Epoch: 003/005 cost: 0.073116983\n",
-      " Training accuracy: 0.953\n",
-      " Test accuracy: 0.973\n",
-      "Epoch: 004/005 cost: 0.054999572\n",
-      " Training accuracy: 0.984\n",
-      " Test accuracy: 0.978\n",
+      "Epoch: 004/005 cost: 0.057375757\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.977\n",
       "Optimization Finished.\n"
      ]
     }
@@ -269,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " If we use 25 seqs, test accuracy becomes 0.834\n"
+      " If we use 25 seqs, test accuracy becomes 0.772\n"
      ]
     }
    ],
