neural style added

--- a/notebooks/demo_Hangul.ipynb
+++ b/notebooks/demo_Hangul.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -139,8 +139,10 @@
     }
    ],
    "source": [
-    "parsed_txt = dump_file(tofile).encode(\"utf8\") # For python2\n",
-    "# parsed_txt = dump_file(tofile) # For python2\n",
+    "if sys.version_info.major == 2:\n",
+    "    parsed_txt = dump_file(tofile).encode(\"utf8\") \n",
+    "else:\n",
+    "    parsed_txt = dump_file(tofile) \n",
     "print (\"Parsing %s done\" % (tofile))\n",
     "print (parsed_txt[:100])"
    ]
