--- a/notebooks/cnn_customdata_basic.ipynb
+++ b/notebooks/cnn_customdata_basic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple CNN with Custom Data"
+    "# CONVOLUTIONAL NEURAL NETWORK WITH CUSTOM DATA"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load data"
+    "# LOAD DATA"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define CNN architecture "
+    "# DEFINE NETWORK"
    ]
   },
   {
@@ -102,16 +102,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Network Ready to Go!\n"
+      "NETWORK READY\n"
      ]
     }
    ],
    "source": [
+    "tf.set_random_seed(0)\n",
     "n_input  = dim\n",
     "n_output = nclass\n",
     "weights  = {\n",
-    "    'wc1': tf.Variable(tf.random_normal([7, 7, 1, 128], stddev=0.1)),\n",
-    "    'wc2': tf.Variable(tf.random_normal([3, 3, 128, 128], stddev=0.1)),\n",
+    "    'wc1': tf.Variable(tf.random_normal([5, 5, 1, 128], stddev=0.1)),\n",
+    "    'wc2': tf.Variable(tf.random_normal([5, 5, 128, 128], stddev=0.1)),\n",
     "    'wd1': tf.Variable(tf.random_normal(\n",
     "            [(int)(imgsize[0]/4*imgsize[1]/4)*128, 128], stddev=0.1)),\n",
     "    'wd2': tf.Variable(tf.random_normal([128, n_output], stddev=0.1))\n",
@@ -123,35 +124,29 @@
     "    'bd2': tf.Variable(tf.random_normal([n_output], stddev=0.1))\n",
     "}\n",
     "def conv_basic(_input, _w, _b, _keepratio):\n",
-    "    # Input\n",
+    "    # INPUT\n",
     "    _input_r = tf.reshape(_input, shape=[-1, imgsize[0], imgsize[1], 1])\n",
-    "    # Conv1\n",
+    "    # CONVOLUTION LAYER 1\n",
     "    _conv1 = tf.nn.relu(tf.nn.bias_add(tf.nn.conv2d(_input_r\n",
     "        , _w['wc1'], strides=[1, 1, 1, 1], padding='SAME'), _b['bc1']))\n",
     "    _pool1 = tf.nn.max_pool(_conv1, ksize=[1, 2, 2, 1]\n",
     "        , strides=[1, 2, 2, 1], padding='SAME')\n",
-    "    # mean, var = tf.nn.moments(_pool1, [0, 1, 2])\n",
-    "    # _pool1 = tf.nn.batch_norm_with_global_normalization(\n",
-    "    #     _pool1, mean, var, 1., 0., 1e-7, 0)\n",
     "    _pool_dr1 = tf.nn.dropout(_pool1, _keepratio)\n",
-    "    # Conv2\n",
+    "    # CONVOLUTION LAYER 2\n",
     "    _conv2 = tf.nn.relu(tf.nn.bias_add(tf.nn.conv2d(_pool_dr1\n",
     "        , _w['wc2'], strides=[1, 1, 1, 1], padding='SAME'), _b['bc2']))\n",
     "    _pool2 = tf.nn.max_pool(_conv2, ksize=[1, 2, 2, 1]\n",
     "        , strides=[1, 2, 2, 1], padding='SAME')\n",
-    "    # mean, var = tf.nn.moments(_pool2, [0, 1, 2])\n",
-    "    # _pool2 = tf.nn.batch_norm_with_global_normalization(\n",
-    "    #     _pool2, mean, var, 1., 0., 1e-7, 0)\n",
     "    _pool_dr2 = tf.nn.dropout(_pool2, _keepratio)\n",
-    "    # Vectorize\n",
+    "    # VECTORIZE\n",
     "    _dense1 = tf.reshape(_pool_dr2\n",
     "                         , [-1, _w['wd1'].get_shape().as_list()[0]])\n",
-    "    # Fc1\n",
+    "    # FULLY CONNECTED LAYER 1\n",
     "    _fc1 = tf.nn.relu(tf.add(tf.matmul(_dense1, _w['wd1']), _b['bd1']))\n",
     "    _fc_dr1 = tf.nn.dropout(_fc1, _keepratio)\n",
-    "    # Fc2\n",
+    "    # FULLY CONNECTED LAYER 2\n",
     "    _out = tf.add(tf.matmul(_fc_dr1, _w['wd2']), _b['bd2'])\n",
-    "    # Return everything\n",
+    "    # RETURN\n",
     "    out = {\n",
     "        'input_r': _input_r, 'conv1': _conv1, 'pool1': _pool1\n",
     "        , 'pool1_dr1': _pool_dr1, 'conv2': _conv2, 'pool2': _pool2\n",
@@ -159,14 +154,14 @@
     "        , 'fc_dr1': _fc_dr1, 'out': _out\n",
     "    }\n",
     "    return out\n",
-    "print (\"Network Ready to Go!\")"
+    "print (\"NETWORK READY\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define functions"
+    "# DEFINE FUNCTIONS"
    ]
   },
   {
@@ -180,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Functions ready\n"
+      "FUNCTIONS READY\n"
      ]
     }
    ],
@@ -201,14 +196,14 @@
     "_corr = tf.equal(tf.argmax(_pred,1), tf.argmax(y,1)) # Count corrects\n",
     "accr = tf.reduce_mean(tf.cast(_corr, tf.float32)) # Accuracy\n",
     "init = tf.initialize_all_variables()\n",
-    "print (\"Functions ready\")"
+    "print (\"FUNCTIONS READY\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimize"
+    "# OPTIMIZE"
    ]
   },
   {
@@ -223,39 +218,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/400 cost: 22.932985306\n",
-      " Training accuracy: 0.460\n",
-      " Test accuracy: 0.400\n",
-      "Epoch: 040/400 cost: 2.813483953\n",
-      " Training accuracy: 0.570\n",
-      " Test accuracy: 0.400\n",
-      "Epoch: 080/400 cost: 2.744574785\n",
-      " Training accuracy: 0.560\n",
-      " Test accuracy: 0.429\n",
-      "Epoch: 120/400 cost: 2.657322884\n",
-      " Training accuracy: 0.840\n",
-      " Test accuracy: 0.629\n",
-      "Epoch: 160/400 cost: 2.600071192\n",
-      " Training accuracy: 0.840\n",
-      " Test accuracy: 0.743\n",
-      "Epoch: 200/400 cost: 2.448372126\n",
-      " Training accuracy: 0.850\n",
-      " Test accuracy: 0.800\n",
-      "Epoch: 240/400 cost: 2.369165897\n",
+      "Epoch: 000/400 cost: 47.848384857\n",
+      " Training accuracy: 0.480\n",
+      " Test accuracy: 0.600\n",
+      "Epoch: 040/400 cost: 2.781695843\n",
+      " Training accuracy: 0.690\n",
+      " Test accuracy: 0.714\n",
+      "Epoch: 080/400 cost: 2.510058403\n",
       " Training accuracy: 0.880\n",
-      " Test accuracy: 0.686\n",
-      "Epoch: 280/400 cost: 2.061110258\n",
-      " Training accuracy: 1.000\n",
       " Test accuracy: 0.800\n",
-      "Epoch: 320/400 cost: 1.966778517\n",
+      "Epoch: 120/400 cost: 2.164654016\n",
+      " Training accuracy: 0.980\n",
+      " Test accuracy: 0.886\n",
+      "Epoch: 160/400 cost: 2.019604206\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.743\n",
-      "Epoch: 360/400 cost: 1.928094387\n",
+      " Test accuracy: 0.829\n",
+      "Epoch: 200/400 cost: 1.963329792\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.829\n",
+      "Epoch: 240/400 cost: 1.923812628\n",
       " Training accuracy: 1.000\n",
       " Test accuracy: 0.771\n",
-      "Epoch: 399/400 cost: 1.898978710\n",
+      "Epoch: 280/400 cost: 1.870155334\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.800\n",
+      " Test accuracy: 0.829\n",
+      "Epoch: 320/400 cost: 1.830017805\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.829\n",
+      "Epoch: 360/400 cost: 1.793158174\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.829\n",
+      "Epoch: 399/400 cost: 1.750298500\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.829\n",
       "Optimization Finished!\n"
      ]
     }
@@ -281,7 +276,7 @@
     "        batch_ys = trainlabel[randidx, :]                \n",
     "        # Fit training using batch data\n",
     "        sess.run(optm, feed_dict={x: batch_xs, y: batch_ys\n",
-    "                                  , keepratio:0.5})\n",
+    "                                  , keepratio:0.7})\n",
     "        # Compute average loss\n",
     "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys\n",
     "                                , keepratio:1.})/num_batch\n",
@@ -296,8 +291,16 @@
     "        test_acc = sess.run(accr, feed_dict={x: testimg\n",
     "                                , y: testlabel, keepratio:1.})\n",
     "        print (\" Test accuracy: %.3f\" % (test_acc))\n",
-    "\n",
     "print (\"Optimization Finished!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# CLOSE SESSION"
    ]
   },
   {
@@ -311,16 +314,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Test accuracy: 0.800\n"
+      "Session closed.\n"
      ]
     }
    ],
    "source": [
-    "test_acc = sess.run(accr, feed_dict={x: testimg\n",
-    "                    , y: testlabel, keepratio:1.})\n",
-    "print (\" Test accuracy: %.3f\" % (test_acc))\n",
-    "#sess.close()\n",
-    "#print (\"Session closed.\")"
+    "sess.close()\n",
+    "print (\"Session closed.\")"
    ]
   }
  ],
