--- a/notebooks/logistic_regression_customdata.ipynb
+++ b/notebooks/logistic_regression_customdata.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Logistic Regression with Custom Data"
+    "# LOGISTIC REGRESSION WITH CUSTOM DATA"
    ]
   },
   {
@@ -95,6 +95,7 @@
    },
    "outputs": [],
    "source": [
+    "tf.set_random_seed(0)\n",
     "# Parameters of Logistic Regression\n",
     "learning_rate   = 0.001\n",
     "training_epochs = 1000\n",
@@ -131,29 +132,18 @@
     }
    ],
    "source": [
-    "if 0:\n",
-    "    # Activation, Cost, and Optimizing functions\n",
-    "    _pred = tf.nn.softmax(tf.matmul(x, W) + b) \n",
-    "    cost = tf.reduce_mean(-tf.reduce_sum(y*tf.log(_pred)\n",
-    "                                         , reduction_indices=1)) \n",
-    "    optm = tf.train.GradientDescentOptimizer(\n",
-    "        learning_rate).minimize(cost) \n",
-    "    _corr = tf.equal(tf.argmax(_pred, 1), tf.argmax(y, 1))    \n",
-    "    accr = tf.reduce_mean(tf.cast(_corr, tf.float32))\n",
-    "    init = tf.initialize_all_variables()\n",
-    "else:\n",
-    "    WEIGHT_DECAY_FACTOR = 0.000001\n",
-    "    l2_loss = tf.add_n([tf.nn.l2_loss(v) \n",
-    "                for v in tf.trainable_variables()])\n",
-    "    _pred = tf.nn.softmax(tf.matmul(x, W) + b) \n",
-    "    cost = tf.reduce_mean(-tf.reduce_sum(y*tf.log(_pred)\n",
-    "                                         , reduction_indices=1)) \n",
-    "    cost = cost + WEIGHT_DECAY_FACTOR*l2_loss\n",
-    "    optm = tf.train.GradientDescentOptimizer(\n",
-    "        learning_rate).minimize(cost) \n",
-    "    _corr = tf.equal(tf.argmax(_pred, 1), tf.argmax(y, 1))    \n",
-    "    accr = tf.reduce_mean(tf.cast(_corr, tf.float32))\n",
-    "    init = tf.initialize_all_variables()\n",
+    "WEIGHT_DECAY_FACTOR = 1 #  0.000001\n",
+    "l2_loss = tf.add_n([tf.nn.l2_loss(v) \n",
+    "            for v in tf.trainable_variables()])\n",
+    "_pred = tf.nn.softmax(tf.matmul(x, W) + b) \n",
+    "cost = tf.reduce_mean(-tf.reduce_sum(y*tf.log(_pred)\n",
+    "                                     , reduction_indices=1)) \n",
+    "cost = cost + WEIGHT_DECAY_FACTOR*l2_loss\n",
+    "optm = tf.train.GradientDescentOptimizer(\n",
+    "    learning_rate).minimize(cost) \n",
+    "_corr = tf.equal(tf.argmax(_pred, 1), tf.argmax(y, 1))    \n",
+    "accr = tf.reduce_mean(tf.cast(_corr, tf.float32))\n",
+    "init = tf.initialize_all_variables()\n",
     "print (\"Functions ready\")"
    ]
   },
@@ -176,36 +166,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/1000 cost: 0.646844172\n",
-      " Training accuracy: 0.600\n",
+      "Epoch: 000/1000 cost: 0.655641246\n",
+      " Training accuracy: 0.500\n",
       " Test accuracy: 0.600\n",
-      "Epoch: 100/1000 cost: 0.335311431\n",
+      "Epoch: 100/1000 cost: 0.400630432\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.771\n",
-      "Epoch: 200/1000 cost: 0.211332241\n",
+      " Test accuracy: 0.543\n",
+      "Epoch: 200/1000 cost: 0.390560913\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.771\n",
-      "Epoch: 300/1000 cost: 0.142198691\n",
+      " Test accuracy: 0.629\n",
+      "Epoch: 300/1000 cost: 0.404686832\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.771\n",
-      "Epoch: 400/1000 cost: 0.124059236\n",
+      " Test accuracy: 0.657\n",
+      "Epoch: 400/1000 cost: 0.325484300\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.743\n",
-      "Epoch: 500/1000 cost: 0.103953008\n",
+      " Test accuracy: 0.657\n",
+      "Epoch: 500/1000 cost: 0.354181266\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.743\n",
-      "Epoch: 600/1000 cost: 0.086223489\n",
+      " Test accuracy: 0.629\n",
+      "Epoch: 600/1000 cost: 0.395351899\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.771\n",
-      "Epoch: 700/1000 cost: 0.082348931\n",
+      " Test accuracy: 0.543\n",
+      "Epoch: 700/1000 cost: 0.407497895\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.771\n",
-      "Epoch: 800/1000 cost: 0.073210715\n",
+      " Test accuracy: 0.686\n",
+      "Epoch: 800/1000 cost: 0.373689485\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.600\n",
+      "Epoch: 900/1000 cost: 0.366497642\n",
       " Training accuracy: 1.000\n",
       " Test accuracy: 0.714\n",
-      "Epoch: 900/1000 cost: 0.056773794\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.743\n",
       "Optimization Finished!\n"
      ]
     }
@@ -238,6 +228,13 @@
     "        test_acc = sess.run(accr, feed_dict={x: testimg, y: testlabel})\n",
     "        print (\" Test accuracy: %.3f\" % (test_acc))\n",
     "print (\"Optimization Finished!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CLOSE SESSION"
    ]
   },
   {
