--- a/notebooks/mlp_customdata_basic.ipynb
+++ b/notebooks/mlp_customdata_basic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple Multi-Layer Pecptron with Custom Data"
+    "# MULTI-LAYER PERCEPTRON WITH CUSTOM DATA"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load data"
+    "# LOAD DATA"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define networks"
+    "# DEFINE NETWORK"
    ]
   },
   {
@@ -107,6 +107,7 @@
     }
    ],
    "source": [
+    "tf.set_random_seed(0)\n",
     "# Parameters\n",
     "learning_rate   = 0.001\n",
     "training_epochs = 200\n",
@@ -148,12 +149,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define functions"
+    "# DEFINE FUNCTIONS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimize"
+    "# OPTIMIZE"
    ]
   },
   {
@@ -193,33 +194,43 @@
    "execution_count": 5,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/200 cost: 4.567779541\n",
-      "Training accuracy: 0.269\n",
-      "Epoch: 020/200 cost: 0.603282154\n",
-      "Training accuracy: 0.712\n",
-      "Epoch: 040/200 cost: 0.336315960\n",
-      "Training accuracy: 0.923\n",
-      "Epoch: 060/200 cost: 0.128558561\n",
-      "Training accuracy: 0.923\n",
-      "Epoch: 080/200 cost: 0.087778911\n",
-      "Training accuracy: 1.000\n",
-      "Epoch: 100/200 cost: 0.054977633\n",
-      "Training accuracy: 1.000\n",
-      "Epoch: 120/200 cost: 0.029800126\n",
-      "Training accuracy: 1.000\n",
-      "Epoch: 140/200 cost: 0.012909556\n",
-      "Training accuracy: 1.000\n",
-      "Epoch: 160/200 cost: 0.007692520\n",
-      "Training accuracy: 1.000\n",
-      "Epoch: 180/200 cost: 0.005626671\n",
-      "Training accuracy: 1.000\n",
+      "Epoch: 000/200 cost: 1.290193915\n",
+      " Training accuracy: 0.692\n",
+      " Test accuracy: 0.629\n",
+      "Epoch: 020/200 cost: 0.429746449\n",
+      " Training accuracy: 0.885\n",
+      " Test accuracy: 0.743\n",
+      "Epoch: 040/200 cost: 0.305125207\n",
+      " Training accuracy: 0.788\n",
+      " Test accuracy: 0.686\n",
+      "Epoch: 060/200 cost: 0.145190075\n",
+      " Training accuracy: 0.962\n",
+      " Test accuracy: 0.714\n",
+      "Epoch: 080/200 cost: 0.068079025\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.771\n",
+      "Epoch: 100/200 cost: 0.044361372\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.771\n",
+      "Epoch: 120/200 cost: 0.026328333\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.771\n",
+      "Epoch: 140/200 cost: 0.017280519\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.771\n",
+      "Epoch: 160/200 cost: 0.006928252\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.743\n",
+      "Epoch: 180/200 cost: 0.008961238\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.743\n",
       "Optimization Finished!\n"
      ]
     }
@@ -243,40 +254,28 @@
     "        # Compute average loss\n",
     "        avg_cost += sess.run(cost, \n",
     "                feed_dict={x: batch_xs, y: batch_ys})/total_batch\n",
-    "    # Display logs per epoch step\n",
+    "        # Display logs per epoch step\n",
     "    if epoch % display_step == 0:\n",
     "        print (\"Epoch: %03d/%03d cost: %.9f\" % \n",
     "               (epoch, training_epochs, avg_cost))\n",
     "        train_acc = sess.run(accr, feed_dict={x: batch_xs, y: batch_ys})\n",
-    "        print (\"Training accuracy: %.3f\" % (train_acc))\n",
+    "        print (\" Training accuracy: %.3f\" % (train_acc))\n",
+    "        test_acc = sess.run(accr, feed_dict={x: testimg, y: testlabel})\n",
+    "        print (\" Test accuracy: %.3f\" % (test_acc))\n",
     "\n",
     "print (\"Optimization Finished!\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test accuracy: 0.800\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "test_acc = sess.run(accr, feed_dict={x: testimg, y: testlabel})\n",
-    "print (\"Test accuracy: %.3f\" % (test_acc))"
+    "# CLOSE SESSION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
